<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewAll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:fillViewport="true"
    tools:context=".pages.activities.order.Checkout">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_checkout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_4sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:layout_gravity="start"
                    android:id="@+id/imgToolbarBtnBack"
                    android:src="@drawable/ic_back"
                    android:contentDescription="TODO" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/ctdh"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ProgressBar
                android:id="@+id/showLoading"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
            </ProgressBar>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/orderDetailRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop = "10dp"
                android:layout_marginBottom = "10dp"/>
        </FrameLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/gray"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">
            <LinearLayout
                android:padding="10dp"
                android:layout_margin="10dp"
                android:background="@drawable/custom_border_checkout"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="5dp"

                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/tongtien"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_height="wrap_content">
                    </TextView>
                    <View
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:layout_height="0dp">

                    </View>

                    <TextView
                        android:id="@+id/subTotalValueTV"
                        android:layout_width="83dp"
                        android:layout_height="39dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_border_btn"
                        android:text="140,000 đ"
                        android:textAlignment="center"
                        android:textColor="@color/white" />




                </LinearLayout>

                <View
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/black"
                    />

                <LinearLayout
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/km"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_height="wrap_content">
                    </TextView>
                    <View
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:layout_height="0dp">

                    </View>

                    <TextView
                        android:id="@+id/discountValueTV"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cckm"
                        android:textAlignment="center"
                        android:textColor="@color/red"
                        android:textStyle="bold" />
                </LinearLayout>






            </LinearLayout>
            <LinearLayout
                android:padding="10dp"
                android:layout_margin="10dp"
                android:background="@drawable/custom_border_checkout"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:padding="5dp"

                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ttdh"
                        android:textColor="@color/black"
                        android:textStyle="bold"></TextView>
                    <View
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:layout_height="0dp">

                    </View>
                    <TextView
                        android:id="@+id/statusOrder"
                        android:layout_weight="1"
                        android:textColor="@color/red"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Đơn hàng chờ xử lý" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:padding="10dp"
                android:layout_margin="10dp"
                android:background="@drawable/custom_border_checkout"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:padding="5dp"

                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/httt"
                        android:textColor="@color/black"
                        android:textStyle="bold"></TextView>
                    <View
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:layout_height="0dp">

                    </View>
                    <TextView
                        android:id="@+id/methodPayment"
                        android:layout_weight="1"
                        android:textColor="@color/red"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ZaloPay" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:padding="10dp"
                android:layout_margin="10dp"
                android:background="@drawable/custom_border_checkout"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:padding="5dp"

                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/total"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_height="wrap_content">
                    </TextView>
                    <View
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:layout_height="0dp">

                    </View>
                    <TextView
                        android:id="@+id/totalValueTV"
                        android:layout_weight="1"

                        android:textColor="@color/red"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="140,000 đ" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cancelOrderDetail"
                android:visibility="gone"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:background="@drawable/custom_border_checkout"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout

                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/cancelOrderDetail"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_height="wrap_content">
                    </TextView>
                    <View
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:layout_height="0dp">
                    </View>
                    <TextView
                        android:id="@+id/cancelOrderDetailTV"
                        android:background="@drawable/custom_border_btn"
                        android:layout_width="wrap_content"
                        android:text="@string/okeCancel"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_height="wrap_content">
                    </TextView>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>



    </LinearLayout>
</ScrollView>